.provarCaches/00D5f000005vwGkEAI/objects/rstk__porcptsrl__c.object
<CustomObject>
    <description>porcptsrl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__porcptsrl_poline__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  TEXT(rstk__porcptsrl_rcptno__c) &amp; &apos;_&apos; &amp;  rstk__porcptsrl_srlno__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_assigndate__c</fullName>
        <inlineHelpText>Date that this Serial Number was assigned</inlineHelpText>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Division associated with this PO Receipt</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divporcptsrls</relationshipLabel>
        <relationshipName>divporcptsrls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_lne__c</fullName>
        <inlineHelpText>This is the PO Line Number of this receipts</inlineHelpText>
        <label>PO Receipt Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_ordno__c</fullName>
        <inlineHelpText>This is the PO Number for this receipt</inlineHelpText>
        <label>Order No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_poline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the PO Line associated with this PO Receipt</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>PO Receipt Serial</relationshipLabel>
        <relationshipName>PO_Receipt_Serial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_qtyacc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity for this receipt (1 means this serial has been received into inventory</inlineHelpText>
        <label>Qty Accepted</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_qtyrwkscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the quantity of  Reworked scrap</inlineHelpText>
        <label>QTYRWKSCRAP (Obsolete)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_qtyscrap__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the quantity scrapped</inlineHelpText>
        <label>qtyscrap (Obsolete)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_rcptno__c</fullName>
        <inlineHelpText>This is the PO Receipt Number</inlineHelpText>
        <label>Receipt Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site associated with this PO Receipt</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>PO Receipt Serial</relationshipLabel>
        <relationshipName>PO_Receipt_Serial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_srlno__c</fullName>
        <inlineHelpText>This is the Serial Number of this receipt</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcptsrl_srlseqno__c</fullName>
        <inlineHelpText>This is an internal number assigned by the system when recording serial numbers</inlineHelpText>
        <label>Serial Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Receipt Serial</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_PO_Receipt_Serial</fullName>
        <columns>NAME</columns>
        <columns>rstk__porcptsrl_div__c</columns>
        <columns>rstk__porcptsrl_ordno__c</columns>
        <columns>rstk__porcptsrl_poline__c</columns>
        <columns>rstk__porcptsrl_rcptno__c</columns>
        <columns>rstk__porcptsrl_lne__c</columns>
        <columns>rstk__porcptsrl_qtyacc__c</columns>
        <columns>rstk__porcptsrl_srlno__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Receipt Serial</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PORCPTSRL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Receipt Serial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>